[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
erupt = "0.22.0"
winit = "0.26.1"
smallvec = "1.8.0"
anyhow = "1.0.58"
glam = { version = "0.20.5", features = ["bytemuck"] }
lz4 = "1.23.3"
rand = "0.8.5"
once_cell = "1.12.0"
arboard = { version = "2.1.1", default-features = false }
flexstr = "0.9.2"
mimalloc = { version = "0.1.29", default-features = false }

hecs = "0.7.7"
#bevy_app = "0.7.0"
bevy_utils = "0.7.0"
# bevy_tasks = "0.7.0"
#bevy_system_graph = "0.2.0"

#freetype-rs = "0.29.0"
#crossbeam-channel = "0.5.2"
bytemuck = { version = "1.9.1", features = ["derive"] }

quinn = { git = "https://github.com/quinn-rs/quinn" }
tokio = { version = "1.19.2", features = ["rt", "macros", "sync"] }
rustls = { version = "0.20.6", default-features = false, features = ["dangerous_configuration", "quic"] }
rcgen = "0.9.2"


shared = { path = "../shared" }
vkcore = { path = "../../libs/vkcore" }
bin_io = { path = "../../libs/bin_io" }
noise = { path = "../../libs/noise" }

# png = "0.17.5"